[gd_scene load_steps=14 format=3 uid="uid://vrn47lsvmkn0"]

[ext_resource type="Script" path="res://character/enemy/zombie/zombie.gd" id="1_f5tjh"]
[ext_resource type="Texture2D" uid="uid://bbsa4kg12nfnm" path="res://character/enemy/zombie/default/zombie-dying-3.png" id="2_i0e6o"]
[ext_resource type="Texture2D" uid="uid://8xxd56hhafbx" path="res://character/enemy/zombie/default/zombie-dying-4.png" id="3_45v8m"]
[ext_resource type="Texture2D" uid="uid://b20yq7co8n01j" path="res://character/enemy/zombie/default/zombie-dying-5.png" id="4_f051i"]
[ext_resource type="Texture2D" uid="uid://bphy8bstbcrwx" path="res://character/enemy/zombie/default/zombie-dying-1.png" id="5_h2hlr"]
[ext_resource type="Texture2D" uid="uid://cspj8gvc28g54" path="res://character/enemy/zombie/default/zombie-dying-2.png" id="6_p6rxq"]
[ext_resource type="Texture2D" uid="uid://wi28nmg0513v" path="res://character/enemy/zombie/default/zombie--idle-1.png" id="7_668t8"]
[ext_resource type="Texture2D" uid="uid://uv7bnnegq6iv" path="res://character/enemy/zombie/default/zombie--hurt-1.png" id="8_bljfo"]
[ext_resource type="Texture2D" uid="uid://kbmm2h5tm4a0" path="res://character/enemy/zombie/default/zombie-hurt-2.png" id="9_ki05x"]
[ext_resource type="Texture2D" uid="uid://b1wwfvj7elxi6" path="res://character/enemy/zombie/default/zombie--walk-1.png" id="10_wrpd4"]
[ext_resource type="Texture2D" uid="uid://bu60mg2gmv2vs" path="res://character/enemy/zombie/default/zombie--walk-2.png" id="11_6lwif"]
[ext_resource type="PackedScene" uid="uid://d2h0ghjruw1gg" path="res://audio/game_ambient_audio_pool.tscn" id="12_ms03m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0nct2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i0e6o")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i0e6o")
}, {
"duration": 1.0,
"texture": ExtResource("3_45v8m")
}, {
"duration": 1.0,
"texture": ExtResource("4_f051i")
}],
"loop": true,
"name": &"despawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_h2hlr")
}, {
"duration": 1.0,
"texture": ExtResource("6_p6rxq")
}, {
"duration": 5.0,
"texture": ExtResource("2_i0e6o")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_668t8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_bljfo")
}, {
"duration": 1.0,
"texture": ExtResource("9_ki05x")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_wrpd4")
}, {
"duration": 1.0,
"texture": ExtResource("11_6lwif")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="FasttZombie" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.1, 1.1)
script = ExtResource("1_f5tjh")
type = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0nct2")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
light_mask = 0
position = Vector2(11, -4)
polygon = PackedVector2Array(-47, -9, -29, -18, -24, -32, -18, -36, 9, -36, 29, -35, 33, -28, 26, -26, 11, -1, 37, 29, 37, 34, 34, 36, 26, 37, 18, 36, 6, 37, -4, 39, -23, 38, -27, 28, -34, 23, -41, 19, -46, 20, -47, 14, -38, 12, -37, -1, -42, -4, -45, -4, -47, -5)

[node name="HurtboxArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HurtboxArea2D"]
light_mask = 0
position = Vector2(11, -4)
polygon = PackedVector2Array(-47, -9, -29, -18, -24, -32, -18, -36, 9, -36, 29, -35, 33, -28, 26, -26, 11, -1, 37, 29, 37, 34, 34, 36, 26, 37, 18, 36, 6, 37, -4, 39, -23, 38, -27, 28, -34, 23, -41, 19, -46, 20, -47, 14, -38, 12, -37, -1, -42, -4, -45, -4, -47, -5)

[node name="VoiceAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Voices"

[node name="WalkingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="GameAmbientAudioPool" parent="." instance=ExtResource("12_ms03m")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 150.0
max_neighbors = 20
max_speed = 500.0

[connection signal="body_entered" from="HurtboxArea2D" to="." method="on_hurtbox_entered"]
